# CMakeList.txt : CMake project for Stl_data, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Stl_data")

# Add source to this project's executable.
add_executable (Stl_data "Stl_data.cpp" "Stl_data.h")

# TODO: Add tests and install targets if needed.
